makemessage.txt
src/util.cpp: In function ‘double init_lattice(double, double, double, double, const char*, const char*, const char*, object*, int)’:
src/util.cpp:1274:69: error: ‘INT_MAX’ was not declared in this scope
 1274 |         if ( ( int ) nrow < 1 || ( int ) ncol < 1 || ( int ) nrow > INT_MAX || ( int ) ncol > INT_MAX )
      |                                                                     ^~~~~~~
src/util.cpp:53:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; this is probably fixable by adding ‘#include <climits>’
   52 | #include "decl.h"
  +++ |+#include <climits>
   53 | 
src/util.cpp: In function ‘double update_lattice(double, double, double)’:
src/util.cpp:1439:62: error: ‘INT_MAX’ was not declared in this scope
 1439 |                  col_int >= columns || ( int ) fabs( val ) > INT_MAX )
      |                                                              ^~~~~~~
src/util.cpp:1439:62: note: ‘INT_MAX’ is defined in header ‘<climits>’; this is probably fixable by adding ‘#include <climits>’
make: *** [makefileNW:77: src/util.o] Error 1
make: ** Esperando que outros processos terminem.
